Follow analyzer recommendations